# metasearch

./: .gitignore  ACTION_PLAN.md  AI_GUIDELINES.md  AUTOCOMPLETE_DEMO.html  AUTOCOMPLETE_FIXED.md  BROKEN_ENGINES_FINAL_REPORT.md  BRUTAL_TRUTH_FINAL.md  BRUTAL_TRUTH_FINAL_REPORT.md  BRUTAL_TRUTH_PERFORMANCE_REPORT.md  BRUTAL_TRUTH_SEARCH_ENGINES_2026.md  CHANGES_SUMMARY.md  COMPARISON_AND_FIXES.md  COMPLETE_TEST_RESULTS.md  CURRENT_STATUS.md  Cargo.toml  DEBUG_AUTOCOMPLETE.md  Dockerfile  EMPTY_ENGINES_ANALYSIS.md  ENGINES.md  ENGINE_COMPARISON.md  ENGINE_DISPLAY_FIX.md  ENGINE_OPTIMIZATION_REPORT.md  ENGINE_TEST_RESULTS.md  FINAL_BRUTAL_TRUTH.md  FINAL_ENGINE_STATUS.md  FINAL_ENGINE_STATUS_2026.md  FINAL_FIX_SUMMARY.md  FINAL_SUMMARY.md  GOOGLE_ENGINE_FIX_NEEDED.md  GPUI.md  GPUI_CODE.;md  GPUI_DESKTOP_APP_GUIDE.md  HOMEPAGE_AUTOCOMPLETE_CONFIRMED.md  HOW_TO_ACCESS_WEBSITE.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_REPORT.md  NETWORK_OPTIMIZATIONS_IMPLEMENTED.md  OPENSEARCH_SETUP.md  PERFORMANCE_IMPLEMENTATION_STATUS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  (+34 more)
.cargo/: config.toml
.github/workflows/: ci.yml
config/: default.toml
crates/metasearch-cli/: Cargo.toml
crates/metasearch-cli/src/: main.rs
crates/metasearch-core/: Cargo.toml
crates/metasearch-core/src/: category.rs  config.rs  engine.rs  error.rs  lib.rs  query.rs  ranking.rs  result.rs
crates/metasearch-engine/: Cargo.toml  debug_deviantart.html  debug_flickr.html  debug_sourcehut.html  google_response.html
crates/metasearch-engine/src/: acfun.rs  adobe_stock.rs  ads.rs  ahmia.rs  alpinelinux.rs  annas_archive.rs  ansa.rs  apkmirror.rs  apple_app_store.rs  apple_maps.rs  archlinux.rs  artic.rs  artstation.rs  arxiv.rs  ask.rs  astrophysics_data_system.rs  azure.rs  baidu.rs  bandcamp.rs  base_search.rs  bilibili.rs  bing.rs  bing_images.rs  bing_news.rs  bing_videos.rs  bitchute.rs  bpb.rs  brave.rs  braveapi.rs  bt4g.rs  btdigg.rs  cachy_os.rs  ccc_media.rs  chefkoch.rs  chinaso.rs  cloudflareai.rs  core_engine.rs  crates_io.rs  crossref.rs  currency_convert.rs  (+178 more)
crates/metasearch-engine/tests/: debug_bing_detailed.rs  debug_bing_regex.rs  debug_empty_specific.rs  debug_google_response.rs  debug_html.rs  debug_image_engines.rs  debug_responses.rs  debug_single.rs  debug_specific.rs  engine_probe.rs  engine_registry.rs  test_academic_video_music_images.rs  test_all_engines_parallel.rs  test_broken_engines.rs  test_critical_engines.rs  test_diagnose.rs  test_empty_engines.rs
crates/metasearch-server/: Cargo.toml
crates/metasearch-server/src/: app.rs  cache.rs  health.rs  lib.rs  orchestrator.rs  state.rs
crates/metasearch-server/src/middleware/: bot_detection.rs  mod.rs  rate_limit.rs
crates/metasearch-server/src/routes/: api.rs  autocomplete.rs  health.rs  mod.rs  opensearch.rs  search.rs
crates/metasearch-server/src/templates/: mod.rs
integrations/: README.md
integrations/metasearch2/: Cargo.toml
integrations/metasearch2/src/: config.rs
integrations/metasearch2/src/engines/: macros.rs  mod.rs
integrations/metasearch2/src/engines/answer/: colorpicker.rs  dictionary.rs  fend.rs  ip.rs  notepad.rs  numbat.rs  thesaurus.rs  timezone.rs  useragent.rs  wikipedia.rs
integrations/metasearch2/src/engines/postsearch/: docs_rs.rs  github.rs  mdn.rs  minecraft_wiki.rs  stackexchange.rs
integrations/metasearch2/src/engines/search/: brave.rs  google.rs  google_scholar.rs  marginalia.rs  rightdao.rs  stract.rs  yep.rs
integrations/metasearch2/src/web/: image_proxy.rs
integrations/metasearch2/src/web/search/: all.rs  images.rs
static/css/: shadcn-vercel.css  style.css
templates/: index.html  opensearch.xml  preferences.html  results.html
