[workspace]
members = [
    "crates/metasearch-core",
    "crates/metasearch-engine",
    "crates/metasearch-server",
    "crates/metasearch-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["najmus-sakib-hossain"]
license = "AGPL-3.0"
repository = "https://github.com/najmus-sakib-hossain/metasearch"
description = "A blazing-fast, privacy-respecting metasearch engine written in Rust — inspired by SearXNG"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "timeout", "limit", "fs"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Templating
tera = "1.20"

# Logging & tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTML parsing
scraper = "0.22"

# Config
config = { version = "0.14", features = ["toml", "yaml"] }

# Async traits & utilities
async-trait = "0.1"
futures = "0.3"

# Caching
moka = { version = "0.12", features = ["future"] }

# Rate limiting
governor = "0.8"

# UUID
uuid = { version = "1.11", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.5"

# Regex
regex = "1.11"

# Concurrency
dashmap = "6.1"

# Random
rand = "0.9"
