[workspace]
members = [
    "crates/metasearch-core",
    "crates/metasearch-engine",
    "crates/metasearch-server",
    "crates/metasearch-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["najmus-sakib-hossain"]
license = "AGPL-3.0"
repository = "https://github.com/najmus-sakib-hossain/metasearch"
description = "A blazing-fast, privacy-respecting metasearch engine written in Rust — inspired by SearXNG"

[profile.release]
opt-level = 3
lto = "fat"  # Link-Time Optimization for maximum performance
codegen-units = 1  # Better optimization (slower compile, faster runtime)
panic = "abort"  # Smaller binary, faster execution
strip = true  # Remove debug symbols

[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "thin"  # Faster compile than "fat", still good optimization
codegen-units = 16  # Faster compile

[profile.bench]
inherits = "release"
debug = true  # Keep debug info for profiling

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["http2", "macros"] }
tower = { version = "0.5", features = ["timeout", "limit", "load-shed"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "timeout", "limit", "fs", "request-id"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls", "http2", "hickory-dns"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Templating
tera = "1.20"

# Logging & tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTML parsing
scraper = "0.22"

# Config
config = { version = "0.14", features = ["toml", "yaml"] }

# Async traits & utilities
async-trait = "0.1"
futures = "0.3"

# Caching
moka = { version = "0.12", features = ["future"] }

# Rate limiting
governor = "0.8"

# UUID
uuid = { version = "1.11", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = "2.5"

# Regex
regex = "1.11"

# Concurrency - PERFORMANCE OPTIMIZATIONS
dashmap = "6.1"  # Lock-free concurrent HashMap
rayon = "1.10"  # Data parallelism
parking_lot = "0.12"  # Faster mutexes
rustc-hash = "2.0"  # Faster hashing (FxHash)
smallvec = { version = "1.13", features = ["union", "const_generics", "serde"] }  # Stack-allocated vectors

# Random
rand = "0.9"

# Performance - Fast allocator (mimalloc wins on all platforms, critical for musl)
mimalloc = { version = "0.1", default-features = false }

# Performance - Fast JSON (SIMD)
sonic-rs = "0.3"
simd-json = "0.14"

# Performance - Zero-copy strings
bytes = "1.9"
compact_str = { version = "0.8", features = ["serde"] }  # Inline strings ≤24 bytes on stack
arcstr = "1"  # Atomically reference-counted static strings

# Performance - Fast hashing
ahash = "0.8"  # For moka hasher and hot-path maps
