[package]
name = "metasearch-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI binary for launching and managing the metasearch engine"

[[bin]]
name = "metasearch"
path = "src/main.rs"

[dependencies]
metasearch-core = { path = "../metasearch-core" }
metasearch-engine = { path = "../metasearch-engine" }
metasearch-server = { path = "../metasearch-server" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
reqwest.workspace = true
