[package]
name = "metasearch-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core types, traits, and utilities for the metasearch engine"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true
uuid.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
