[package]
name = "metasearch-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Search engine implementations (Google, DuckDuckGo, Brave, Wikipedia, etc.)"

[dependencies]
metasearch-core = { path = "../metasearch-core" }
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
url.workspace = true
regex.workspace = true
