[package]
name = "metasearch-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Search engine implementations translated from SearXNG Python to Rust"

[dependencies]
metasearch-core = { path = "../metasearch-core" }
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
url.workspace = true
regex.workspace = true
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
html-escape = "0.2"
base64 = "0.22"

[dev-dependencies]
tokio.workspace = true
