[package]
name = "metasearch-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Search engine implementations translated from SearXNG Python to Rust"

[features]
default = []
# Enable SQLite database engine (requires rusqlite)
sqlite = ["rusqlite", "tokio/rt"]
# Enable PostgreSQL database engine (requires tokio-postgres)
postgres = ["tokio-postgres"]
# Enable MySQL/MariaDB database engine (requires mysql_async)
mysql = ["mysql_async"]
# Enable MongoDB database engine (requires mongodb)
mongodb_feature = ["mongodb", "futures"]
# Enable Valkey/Redis database engine (requires redis)
redis = ["dep:redis"]
# Enable all database engines
databases = ["sqlite", "postgres", "mysql", "mongodb_feature", "redis"]

[dependencies]
metasearch-core = { path = "../metasearch-core" }
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
url.workspace = true
regex.workspace = true
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
html-escape = "0.2"
base64 = "0.22"

# Optional database dependencies
rusqlite = { version = "0.32", optional = true }
tokio-postgres = { version = "0.7", optional = true }
mysql_async = { version = "0.34", optional = true }
mongodb = { version = "3.1", optional = true }
redis = { version = "0.27", features = ["tokio-comp"], optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tokio.workspace = true
